# cp-heuristics-adapter

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: CI.yml  macos-latest.yml  ubuntu-latest.yml  windows-latest.yml
cp_heuristics_adapter/: languages.py  logger_config.yaml  main.py  project.py  runner.py  setup_logger.py
cp_heuristics_adapter/subcommands/: clean.py  init.py  run.py  subcommand.py
cp_heuristics_adapter/util/: config_util.py  file_deletion_interactor.py  pathlib_util.py
templates/: example_solver.cpp  example_solver.py
templates/.cp-heuristics-adapter/: cpp_config.toml  py_config.toml
tests/: conftest.py  test_config_util.py  test_file_deletion_interactor.py  test_languages.py  test_pathlib_util.py  test_project.py  test_runner.py
tests/data/: cpp_config.toml  py_config.toml
